--- a/frontend/src/components/layouts/styles.css
+++ b/frontend/src/components/layouts/styles.css
@@ -123,13 +123,15 @@
     margin: auto;
     padding:10px;
 }
-
+.backgr{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .footer2maindiv{
     position: fixed;
     width: 100vw;
     height: 12vh;
     padding-right: 0.5rem;
-    background-color: #B2A4FF;
+    background-color: #0A4D68;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -814,6 +816,18 @@
     align-items: end;
 
   }
+  .modal-content3 {
+    background-color: #fefefe;
+    margin: 8% auto; /* 15% from the top and centered */
+    padding: 0 20px 20px;
+    border-radius: 5px;
+    width: 40vw; /* Could be more or less, depending on screen size */
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+
+  }
 
   /* The Close Button */
   .close2 {
@@ -866,6 +880,12 @@
     position: absolute;
     top: 12vh;
     width: 100vw;
+}
+.centerrrr{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
 }
 .studentallprojectdiv1{
    
